--- a/app/src/main/res/layout/fragment_do_action.xml
+++ b/app/src/main/res/layout/fragment_do_action.xml
@@ -1,135 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_height="match_parent"
-  android:layout_width="match_parent"
-  android:background="#615757">
+<layout
+  xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <TextView
-    android:id="@+id/players_hand"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Player's Hand"
-    android:textSize="32dp"
-    android:textAlignment="center"
-    android:textColor="#FFFFFF"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toTopOf="@+id/buys"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"/>
-  <TextView
-    android:id="@+id/actions"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:freezesText="true"
-    android:text="Actions"
-    android:textColor="#FFFFFF"
-    android:textSize="24sp"
-    app:layout_constraintBottom_toTopOf="@id/view_pager"
-    app:layout_constraintEnd_toStartOf="@+id/buys"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/players_hand"
-    app:layout_constraintVertical_bias="1.0"/>
+  <data>
+    <variable
+      name="viewModel"
+      type="edu.cnm.deepdive.dominionandroid.viewmodel.GameViewModel"/>
+  </data>
 
-  <TextView
-    android:id="@+id/buys"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:freezesText="true"
-    android:text="Buys"
-    android:textColor="#FFFFFF"
-    android:textSize="24sp"
-    app:layout_constraintBottom_toTopOf="@id/view_pager"
-    app:layout_constraintEnd_toStartOf="@+id/gold"
-    app:layout_constraintStart_toEndOf="@id/actions"
-    app:layout_constraintTop_toBottomOf="@id/players_hand"/>
+  <androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:background="#615757">
 
-  <TextView
-    android:id="@+id/gold"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:freezesText="true"
-    android:text="Gold"
-    android:textColor="#FFFFFF"
-    android:textSize="24sp"
-    app:layout_constraintBottom_toTopOf="@id/view_pager"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toEndOf="@id/buys"
-    app:layout_constraintTop_toBottomOf="@id/players_hand"/>
-
-  <androidx.viewpager.widget.ViewPager
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/view_pager"
-    android:layout_width="wrap_content"
-    android:layout_height="0dp"
-    app:layout_constraintBottom_toTopOf="@id/end_turn"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/buys"
-    tools:context=".controller.DoActionFragment"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    android:paddingLeft="36dp"
-    android:paddingRight="36dp"/>
-
-  <Button
-    android:id="@+id/play_card"
-    android:layout_width="125dp"
-    android:layout_height="wrap_content"
-    android:background="@drawable/blue_button"
-    android:fontFamily="monospace"
-    android:shadowColor="#A8A8A8"
-    android:shadowDx="0"
-    android:shadowDy="0"
-    android:shadowRadius="5"
-    android:text="Play Card"
-    android:textColor="#FFFFFF"
-    android:textSize="20sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toStartOf="@id/end_action"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/view_pager"/>
-
-  <Button
-    android:id="@+id/end_action"
-    android:layout_width="125dp"
-    android:layout_height="wrap_content"
-    android:background="@drawable/blue_button"
-    android:fontFamily="monospace"
-    android:shadowColor="#A8A8A8"
-    android:shadowDx="0"
-    android:shadowDy="0"
-    android:shadowRadius="5"
-    android:text="End Actions"
-    android:textAlignment="center"
-    android:textColor="#FFFFFF"
-    android:textSize="20sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toStartOf="@id/end_turn"
-    app:layout_constraintStart_toEndOf="@id/play_card"
-    app:layout_constraintTop_toBottomOf="@+id/view_pager"/>
-
-  <Button
-    android:id="@+id/end_turn"
-    android:layout_width="125dp"
-    android:layout_height="wrap_content"
-    android:background="@drawable/blue_button"
-    android:fontFamily="monospace"
-    android:shadowColor="#A8A8A8"
-    android:shadowDx="0"
-    android:shadowDy="0"
-    android:shadowRadius="5"
-    android:text="End Turn"
-    android:textAlignment="center"
-    android:textColor="#FFFFFF"
-    android:textSize="20sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toEndOf="@id/end_action"
-    app:layout_constraintTop_toBottomOf="@+id/view_pager"/>
+    <TextView
+      android:id="@+id/players_hand"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Player's Hand"
+      android:textSize="32dp"
+      android:textAlignment="center"
+      android:textColor="#FFFFFF"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintBottom_toTopOf="@+id/buys"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+      android:id="@+id/actions"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:freezesText="true"
+      android:textColor="#FFFFFF"
+      android:textSize="24sp"
+      app:layout_constraintBottom_toTopOf="@id/view_pager"
+      app:layout_constraintEnd_toStartOf="@+id/buys"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/players_hand"
+      app:layout_constraintVertical_bias="1.0"/>
+    android:text="@{viewModel.myActionsRemaining}"/>-->
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+      android:id="@+id/buys"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:freezesText="true"
+      android:text="Buys"
+      android:textColor="#FFFFFF"
+      android:textSize="24sp"
+      app:layout_constraintBottom_toTopOf="@id/view_pager"
+      app:layout_constraintEnd_toStartOf="@+id/gold"
+      app:layout_constraintStart_toEndOf="@id/actions"
+      app:layout_constraintTop_toBottomOf="@id/players_hand"/>
+
+    <TextView
+      android:id="@+id/gold"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:freezesText="true"
+      android:text="Gold"
+      android:textColor="#FFFFFF"
+      android:textSize="24sp"
+      app:layout_constraintBottom_toTopOf="@id/view_pager"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toEndOf="@id/buys"
+      app:layout_constraintTop_toBottomOf="@id/players_hand"/>
+
+    <androidx.viewpager.widget.ViewPager
+      xmlns:tools="http://schemas.android.com/tools"
+      android:id="@+id/view_pager"
+      android:layout_width="wrap_content"
+      android:layout_height="0dp"
+      app:layout_constraintBottom_toTopOf="@id/end_turn"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/buys"
+      tools:context=".controller.DoActionFragment"
+      android:paddingTop="16dp"
+      android:paddingBottom="16dp"
+      android:paddingLeft="36dp"
+      android:paddingRight="36dp"/>
+
+    <Button
+      android:id="@+id/play_card"
+      android:layout_width="125dp"
+      android:layout_height="wrap_content"
+      android:background="@drawable/blue_button"
+      android:fontFamily="monospace"
+      android:shadowColor="#A8A8A8"
+      android:shadowDx="0"
+      android:shadowDy="0"
+      android:shadowRadius="5"
+      android:text="Play Card"
+      android:textColor="#FFFFFF"
+      android:textSize="20sp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/end_action"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/view_pager"/>
+
+    <Button
+      android:id="@+id/end_action"
+      android:layout_width="125dp"
+      android:layout_height="wrap_content"
+      android:background="@drawable/blue_button"
+      android:fontFamily="monospace"
+      android:shadowColor="#A8A8A8"
+      android:shadowDx="0"
+      android:shadowDy="0"
+      android:shadowRadius="5"
+      android:text="End Actions"
+      android:textAlignment="center"
+      android:textColor="#FFFFFF"
+      android:textSize="20sp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toStartOf="@id/end_turn"
+      app:layout_constraintStart_toEndOf="@id/play_card"
+      app:layout_constraintTop_toBottomOf="@+id/view_pager"/>
+
+    <Button
+      android:id="@+id/end_turn"
+      android:layout_width="125dp"
+      android:layout_height="wrap_content"
+      android:background="@drawable/blue_button"
+      android:fontFamily="monospace"
+      android:shadowColor="#A8A8A8"
+      android:shadowDx="0"
+      android:shadowDy="0"
+      android:shadowRadius="5"
+      android:text="End Turn"
+      android:textAlignment="center"
+      android:textColor="#FFFFFF"
+      android:textSize="20sp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toEndOf="@id/end_action"
+      app:layout_constraintTop_toBottomOf="@+id/view_pager"/>
+
+
+  </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
